--- a/index.html
+++ b/index.html
@@ -12,33 +12,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <script src="frontend.js" defer></script>
-
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
-<style>
-  #loginButton {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-  }
-
-  #loginPopup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-  }
-
-  #loginForm input {
-    margin-bottom: 10px;
-  }
-</style>
 
 <body>
 
@@ -47,7 +22,6 @@
     <button id="loginButton" class="btn btn-primary" onclick="toggleLoginPopup()">Login</button>
 
     <h1 class="mb-4">User Management</h1>
-
     <form id="createUserForm">
       <div class="form-row align-items-end">
         <div class="col-md-4 mb-3">
@@ -57,6 +31,10 @@
         <div class="col-md-4 mb-3">
           <label for="email">Email:</label>
           <input type="email" class="form-control" id="email" required>
+        </div>
+        <div class="col-md-4 mb-3">
+          <label for="password">Password:</label>
+          <input type="password" class="form-control" id="password" required>
         </div>
         <div class="col-md-4 mb-3">
           <button type="button" class="btn btn-primary" onclick="createUser()">Create User</button>
@@ -100,11 +78,11 @@
   <form id="loginForm">
     <div class="form-group">
       <label for="username">Username:</label>
-      <input type="text" class="form-control" id="username" required>
+      <input type="text" class="form-control" id="popup_username" required>
     </div>
     <div class="form-group">
-      <label for="password">Password: *not required*</label>
-      <input type="password" class="form-control" id="password" required>
+      <label for="password">Password:</label>
+      <input type="password" class="form-control" id="popup_password" required>
     </div>
     <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
     <button type="button" class="btn btn-secondary" onclick="toggleLoginPopup()">Close</button>
@@ -150,6 +128,10 @@
             <label for="editEmail">Email:</label>
             <input type="email" class="form-control" id="editEmail" required>
           </div>
+          <div class="form-group">
+            <label for="editPassword">New Password:</label>
+            <input type="password" class="form-control" id="editPassword">
+          </div>
         </form>
       </div>
       <div class="modal-footer">
@@ -159,6 +141,7 @@
     </div>
   </div>
 </div>
+
 
 </body>
 
