--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <form id="createUserForm">
       <div class="form-row align-items-end">
         <div class="col-md-4 mb-3">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control" id="name" required>
+          <label for="username">Name:</label>
+          <input type="text" class="form-control" id="username" required>
         </div>
         <div class="col-md-4 mb-3">
           <label for="email">Email:</label>
